# ai-workgroup-orchestrator

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  aiwg.yaml  pyproject.toml
aiwg/: __init__.py  adapter_binary_readiness.py  adapter_output.py  adapter_readiness_gate.py  adapter_registry.py  cli.py  config.py  d5_preflight.py  doctor.py  evidence_paths.py  external_review_gate.py  git_steward.py  operator_approval.py  policy.py  real_adapter_executor.py  real_adapter_launch_preflight.py  real_adapter_process.py  real_adapter_sandbox.py  role_health.py  scope.py  topology.py  verification.py  workflow_contract.py  workflow_preflight.py  write_gate.py
aiwg/dashboard/: __init__.py  status.py
aiwg/mcp/: __init__.py  server.py  tools.py
aiwg/protocol/: __init__.py  frontmatter.py  schema.py
aiwg/runners/: __init__.py  fake.py  orchestrator.py
aiwg/state/: __init__.py  claims.py  database.py  importer.py
docs/: OPEN_SOURCE_CHECKLIST.md
docs/ai-workgroup/: 00-protocol.md
docs/examples/: hermes-mcp-aiwg-readonly.yaml
docs/guides/: phase-c-hermes-desktop-mcp-smoke-checklist.md  phase-c-hermes-mcp-readonly-client.md  phase-c-readonly-mcp-acceptance-summary.md  phase-d0-controlled-write-gate-design.md  phase-d1-dry-run-write-gate-evaluator.md  phase-d3-workflow-preflight.md  phase-d4-4-topology-workflow-contract.md  phase-d4-external-review-gate.md  phase-d4-git-steward-dry-run.md  phase-d4-role-health-contract.md  phase-d5-0-preflight-minimal.md  tutti-reference-review.md  (+3 more)
scripts/: run_aiwg_mcp_readonly.py
(+141 files in other folders)
