[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-workgroup-orchestrator"
version = "0.1.0"
description = "Deterministic Python + SQLite control plane for AI workgroup orchestration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]
mcp = [
  "mcp>=1.0",
  "starlette<0.47",
  "sse-starlette>=1.6.1,<3",
]

[project.scripts]
aiwg = "aiwg.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
